--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Brunostar and Stanley Colab</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Hello World, we are software developers!</h1>
     </body>
 </html>
