--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <title>Brunostar and Stanley Colab</title>
     </head>
     <body>
-        <h1>Hello World, we are software developers!</h1>
+        <!--<h1>Hello World, we are software developers!</h1> -->
+        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+        <header id="header">
+            <img id="header-img" src="image.png">
+        </header>
     </body>
 </html>
