--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="main.css" type="text/css">
         <title>Brunostar and Stanley Colab</title>
     </head>
     <body>
         <!--<h1>Hello World, we are software developers!</h1> -->
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
         <header id="header">
-            <img id="header-img" src="image.png">
+            <img id="header-img" src="https://live.staticflickr.com/8358/8297629214_efc30dd68d_b.jpg" alt="">
+            <nav id="nav-bar">
+                <ul>
+                    <li class="nav-link"><a href="#">Features</a></li>
+                    <li class="nav-link"><a href="#">How it works</a></li>
+                    <li class="nav-link"><a href="#">Pricing</a></li>
+                </ul>
+            </nav>
         </header>
+        <video controls width="500" id="video">
+
+            <source src="/media/examples/flower.webm"
+                    type="video/webm">
+        
+            <source src="/media/examples/flower.mp4"
+                    type="video/mp4">
+        
+            Sorry, your browser doesn't support embedded videos.
+        </video>
+        <form id="form">
+            <label id="email-label">Email:</label>
+            <input type="email" id="email" placeholder="Enter your email" required>
+            <button type="submit" id="submit">Submit</button>
+        </form>
     </body>
 </html>
