--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <img id="header-img" src="https://live.staticflickr.com/8358/8297629214_efc30dd68d_b.jpg" alt="">
             <nav id="nav-bar">
                 <ul>
-                    <li class="nav-link"><a href="#">Features</a></li>
-                    <li class="nav-link"><a href="#">How it works</a></li>
-                    <li class="nav-link"><a href="#">Pricing</a></li>
+                    <li class="nav-link"><a href="_video">Features</a></li>
+                    <li class="nav-link"><a href="_main">How it works</a></li>
+                    <li class="nav-link"><a href="_header">Pricing</a></li>
                 </ul>
             </nav>
         </header>
@@ -27,10 +27,15 @@
         
             Sorry, your browser doesn't support embedded videos.
         </video>
-        <form id="form">
+        <form id="form" action=" https://www.freecodecamp.com/email-submit">
             <label id="email-label">Email:</label>
-            <input type="email" id="email" placeholder="Enter your email" required>
-            <button type="submit" id="submit">Submit</button>
+            <input type="email" id="email" placeholder="Enter your email" required name="email">
+            <input type="submit" id="submit" >Submit</input>
         </form>
+        <div id="main">
+            <div id="sub1"></div>
+            <div id="sub2"></div>
+            
+        </div>
     </body>
 </html>
