--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <input type="email" id="email" placeholder="Enter your email" required name="email">
             <input type="submit" id="submit" >Submit</input>
         </form>
-        <div id="main">
-            <div id="sub1"></div>
-            <div id="sub2"></div>
-            
-        </div>
+        <div class="flex-container">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>  
+          </div>
     </body>
 </html>
